# BusTicketBookingSystem_with_AI

./: Dockerfile  LICENSE  README.md  data.json  docker-compose.yaml  frontend.py  pyproject.toml  requirements.txt  start.sh
app/: config.py  main.py
app/api/routes/: chat.py
app/schemas/: chat_schema.py
app/services/: buss_data_loader.py  chatbot_langgraph.py  load_to_pinecone.py
app/services/langgraph_nodes/: ask_for_info.py  book_ticket.py  cancel_ticket.py  detect_intent.py  general_chat.py  provider_info.py  view_ticket.py
app/utils/: chat_memory.py
data/: desh travel.txt  ena.txt  green line.txt  hanif.txt  shyamoli.txt  soudia.txt
test/: chatbot.py  check.py  crud.py  test.ipynb
